--- a/config/locales/models.pt-BR.yml
+++ b/config/locales/models.pt-BR.yml
@@ -2,6 +2,7 @@ pt-BR:
   activerecord:
     models:
       activity: Atividade
+      category: 'Categoria'
     attributes:
       activity:
         category: 'Categoria'
