--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,12 +1,19 @@
----
 pt-BR:
   activerecord:
+    models:
+      activity: Atividade
+      category: 'Categoria'
+    activity:
+      created: 'Atividade criada com sucesso'
+      updated: 'Atividade atualizada com sucesso'
+      destroyed: 'Atividade deletada com sucesso'
+      auth: 'Você não tem autorização para isso'
     errors:
       messages:
         record_invalid: 'A validação falhou: %{errors}'
         restrict_dependent_destroy:
-          has_one: Não é possível excluir o registro pois existe um %{record} dependente
-          has_many: Não é possível excluir o registro pois existem %{record} dependentes
+          has_one: 'Não é possível excluir o registro pois existe um \%{record} dependente'
+          has_many: 'Não é possível excluir o registro pois existem \%{record} dependentes'
   date:
     abbr_day_names:
     - dom
@@ -17,7 +24,7 @@ pt-BR:
     - sex
     - sáb
     abbr_month_names:
-    - 
+
     - jan
     - fev
     - mar
